--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -86,7 +86,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/onClickSkill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -94,7 +94,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/swoosh_biutton"
         android:fontFamily="@font/montserrat"
-        android:text="@string/button"
+        android:onClick="onClicktoFinish"
+        android:text="@string/next"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
